--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,1 +1,8 @@
-
+FROM node:14-alpine
+WORKDIR /back-end
+COPY ./package.json .
+RUN npm install
+ADD ./node_modules.tar.gz .
+COPY . .
+# RUN npm run build
+ENTRYPOINT ["npm", "start"]
